Location's footer fixed and some bugs fixed

--- a/Client/Pages/Locations/location.html
+++ b/Client/Pages/Locations/location.html
@@ -143,9 +143,97 @@
             </div>
           </div>
         </div>
+        <div class="location">
+          <div class="location-top">
+            <div class="left">
+              <h1>500 Lyons Avenue</h1>
+              <div class="mid">
+                <span class="distance">3 km</span>
+                <span class="work">~Open</span>
+              </div>
+              <div class="functionality">
+                <span>Drive Thru</span>
+                <span>Take Out</span>
+                <span>Eat In</span>
+              </div>
+            </div>
+            <div class="right">
+              <button>
+                <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+                <img src="../../Assets/Icons/heart-red.png" alt="" />
+              </button>
+            </div>
+          </div>
+          <div class="location-bottom">
+            <div class="order-menu">
+              <a href="">
+                <button class="location-offers">
+                  <img src="../../Assets/Icons/information.png" alt="" />
+                </button>
+                <span>Info</span>
+              </a>
+              <a href="">
+                <button class="location-order">
+                  <img src="../../Assets/Icons/burger.png" alt="" />
+                </button>
+                <span>Order</span>
+              </a>
+              <a href="">
+                <button class="location-info">
+                  <img src="../../Assets/Icons/order.png" alt="" />
+                </button>
+                <span>Offers</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="location">
+          <div class="location-top">
+            <div class="left">
+              <h1>500 Lyons Avenue</h1>
+              <div class="mid">
+                <span class="distance">3 km</span>
+                <span class="work">~Open</span>
+              </div>
+              <div class="functionality">
+                <span>Drive Thru</span>
+                <span>Take Out</span>
+                <span>Eat In</span>
+              </div>
+            </div>
+            <div class="right">
+              <button>
+                <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+                <img src="../../Assets/Icons/heart-red.png" alt="" />
+              </button>
+            </div>
+          </div>
+          <div class="location-bottom">
+            <div class="order-menu">
+              <a href="">
+                <button class="location-offers">
+                  <img src="../../Assets/Icons/information.png" alt="" />
+                </button>
+                <span>Info</span>
+              </a>
+              <a href="">
+                <button class="location-order">
+                  <img src="../../Assets/Icons/burger.png" alt="" />
+                </button>
+                <span>Order</span>
+              </a>
+              <a href="">
+                <button class="location-info">
+                  <img src="../../Assets/Icons/order.png" alt="" />
+                </button>
+                <span>Offers</span>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-    <footer>
+    <div class="location-footer">
       <div class="footer">
         <div>
           <a href="../Home/home.html">
@@ -178,6 +266,6 @@
           </a>
         </div>
       </div>
-    </footer>
+    </div>
   </body>
 </html>
