Order-pickup page created , some bugs fixed

--- a/Client/Pages/Delivery/delivery.html
+++ b/Client/Pages/Delivery/delivery.html
@@ -13,6 +13,7 @@
       href="https://db.onlinewebfonts.com/c/565a681be0eb6f1d92c6bc57c629ea35?family=Flame+Bold"
       rel="stylesheet"
     />
+    <script defer src="./delivery.js"></script>
   </head>
   <body>
     <div class="delivery-navbar">
