--- a/Client/Pages/Locations/location.html
+++ b/Client/Pages/Locations/location.html
@@ -41,9 +41,8 @@
         </div>
       </div>
     </section>
-    <section class="location-locations">
+    <!-- <section class="location-locations">
       <div class="top">
-        <!-- without js in a tag -->
         <a href="">
           <button class="nearby active">Nearby</button>
         </a>
@@ -232,7 +231,156 @@
           </div>
         </div>
       </div>
+    </section> -->
+    <section class="location-locations">
+      <div class="locations-menu">
+        <button class="active" onclick="showNearby()">Nearby</button>
+        <button onclick="showFavorites()">Favorites</button>
+        <button onclick="showRecents()">Recents</button>
+      </div>
     </section>
+
+    <section class="nearby-content">
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue Near</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="">
+              <button class="location-offers">
+                <img src="../../Assets/Icons/information.png" alt="" />
+              </button>
+              <span>Info</span>
+            </a>
+            <a href="">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="favorites-content">
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue Fav</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="">
+              <button class="location-offers">
+                <img src="../../Assets/Icons/information.png" alt="" />
+              </button>
+              <span>Info</span>
+            </a>
+            <a href="">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="recents-content">
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue Recent</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="">
+              <button class="location-offers">
+                <img src="../../Assets/Icons/information.png" alt="" />
+              </button>
+              <span>Info</span>
+            </a>
+            <a href="">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div class="location-footer">
       <div class="footer">
         <div>
