Order-Delivery page fixed , location and delivery pages fixed

--- a/Client/Pages/Delivery/delivery.html
+++ b/Client/Pages/Delivery/delivery.html
@@ -32,7 +32,11 @@
           </a>
         </div>
         <div class="bottom">
-          <input placeholder="Your Address" type="text" />
+          <form  method="get" id="searchForm">
+            <div>
+                <input type="text" class="form-control" name="query" id="searchInput" placeholder="Enter your search" aria-label="Search" aria-describedby="searchButton">
+            </div>
+        </form>
         </div>
       </div>
     </section>
