--- a/Client/Pages/Order-Pickup/order-pickup.html
+++ b/Client/Pages/Order-Pickup/order-pickup.html
@@ -24,7 +24,7 @@
         </a>
       </div>
       <div class="right">
-        <h4>Order</h4>
+        <h4>Order Pick-Up</h4>
       </div>
     </div>
     <div class="restaurant-detail">
