--- a/Client/Pages/Menu/menu.html
+++ b/Client/Pages/Menu/menu.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="Icon" type="Images/Icon" href="../../Assets/Icons/burger-king.png">
+
+    <title>Menu - Burger King</title>
     <link
       href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
       rel="stylesheet"
@@ -18,7 +20,7 @@
     <header>
       <div class="navbar">
         <div class="top">
-          <a class="burgermenu" href="">
+          <a class="burgermenu" href="../BurgerMenu/burgermenu.html">
             <img src="./../../Assets/Icons/burger-bar.png" alt="" />
           </a>
           <a class="logo" href="../Home/home.html">
@@ -45,55 +47,46 @@
         </div>
       </div>
     </header>
-    <div class="menu-navbar">
-      <a href="./menu.html">
-        <div class="navbar-menu">Full Menu</div>
-      </a>
-      <a href="">
-        <div class="navbar-recents">Recents</div>
-      </a>
-      <a href="">
-        <div class="navbar-favorites">Favorites</div>
-      </a>
-    </div>
+
     <section class="section-menu">
       <div class="cards">
         <div class="eat-card">
-          <a href="">
+          <a href="../Detail/detail.html">
             <img src="../../Assets/Images/featured.png" alt="" />
             <span>Featured</span>
           </a>
         </div>
         <div class="eat-card">
-          <a href="">
+          <a href="../Detail/detail.html">
             <img src="../../Assets/Images/flame-grill=burger.png" alt="" />
             <span>Flame Grill Burgers</span>
           </a>
         </div>
         <div class="eat-card">
-          <a href="">
+          <a href="../Detail/detail.html">
             <img src="../../Assets/Images/chicken-fish.png" alt="" />
             <span>Chicken & Fish</span>
           </a>
         </div>
         <div class="eat-card">
-          <a href="">
+          <a href="../Detail/detail.html">
             <img src="../../Assets/Images/Sides.png" alt="" />
             <span>Sides</span>
           </a>
         </div>
         <div class="eat-card">
-          <a href="">
+          <a href="../Detail/detail.html">
             <img src="../../Assets/Images/drinks.png" alt="" />
             <span>Drinks & Coffee</span>
           </a>
         </div>
         <div class="eat-card">
-          <a href="">
+          <a href="../Detail/detail.html">
             <img src="../../Assets/Images/condiments.png" alt="" />
             <span>Condiments</span>
           </a>
         </div>
+        
       </div>
     </section>
   </body>
