--- a/Client/Pages/Sub-menu/submenu.html
+++ b/Client/Pages/Sub-menu/submenu.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,16 +12,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../SCSS/main.css" />
-    <title>Document</title>
+    <link
+      rel="Icon"
+      type="Images/Icon"
+      href="../../Assets/Icons/burger-king.png"
+    />
+    <title>Sub Menu - Burger King</title>
   </head>
   <body>
     <header>
       <div class="navbar">
         <div class="top">
-          <a class="burgermenu" href="">
+          <a class="burgermenu" href="../BurgerMenu/burgermenu.html">
             <img src="./../../Assets/Icons/burger-bar.png" alt="" />
           </a>
-          <a class="logo" href="./home.html">
+          <a class="logo" href="../Home/home.html">
             <img src="./../../Assets/Icons/burger-king.png" alt="" />
           </a>
           <div class="buttons">
@@ -48,9 +52,41 @@
     </header>
     <div class="submenu-eat-cards">
       <div class="eat-cards">
+        <div class="eat-card">
+          <a href="../Detail/detail.html">
+            <img src="../../Assets/Images/coca-cola.webp" alt="" />
+            <span>Coca Cola</span>
+            <div>
+              <span>$2.99</span>
+              <p>350 cal</p>
+            </div>
+          </a>
+        </div>
 
         <div class="eat-card">
-          <a href="">
+          <a href="../Detail/detail.html">
+            <img src="../../Assets/Images/coca-cola.webp" alt="" />
+            <span>Coca Cola</span>
+            <div>
+              <span>$2.99</span>
+              <p>350 cal</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="eat-card">
+          <a href="../Detail/detail.html">
+            <img src="../../Assets/Images/coca-cola.webp" alt="" />
+            <span>Coca Cola</span>
+            <div>
+              <span>$2.99</span>
+              <p>350 cal</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="eat-card">
+          <a href="../Detail/detail.html">
             <img src="../../Assets/Images/coca-cola.webp" alt="" />
             <span>Coca Cola</span>
             <div>
@@ -60,7 +96,7 @@
           </a>
         </div>
         <div class="eat-card">
-          <a href="">
+          <a href="../Detail/detail.html">
             <img src="../../Assets/Images/coca-cola.webp" alt="" />
             <span>Coca Cola</span>
             <div>
@@ -69,42 +105,14 @@
             </div>
           </a>
         </div>
-        <div class="eat-card">
-          <a href="">
-            <img src="../../Assets/Images/coca-cola.webp" alt="" />
-            <span>Coca Cola</span>
-            <div>
-              <span>$2.99</span>
-              <p>350 cal</p>
-            </div>
-          </a>
-        </div>
-        <div class="eat-card">
-          <a href="">
-            <img src="../../Assets/Images/coca-cola.webp" alt="" />
-            <span>Coca Cola</span>
-            <div>
-              <span>$2.99</span>
-              <p>350 cal</p>
-            </div>
-          </a>
-        </div>
-        <div class="eat-card">
-          <a href="">
-            <img src="../../Assets/Images/coca-cola.webp" alt="" />
-            <span>Coca Cola</span>
-            <div>
-              <span>$2.99</span>
-              <p>350 cal</p>
-            </div>
-          </a>
-        </div>
+        
       </div>
+
     </div>
     <footer>
       <div class="footer">
         <div>
-          <a href="./home.html">
+          <a href="../Home/home.html">
             <img src="../../Assets/Icons/home.png" alt="" />
             <span>Home</span>
           </a>
@@ -115,22 +123,11 @@
             <span>Menu</span>
           </a>
         </div>
+
         <div>
-          <a href="">
-            <img src="../../Assets/Icons/barcode.png" alt="" />
-            <span>My Code</span>
-          </a>
-        </div>
-        <div>
-          <a href="">
+          <a href="../Offer/offer.html">
             <img src="../../Assets/Icons/discount.png" alt="" />
             <span>Offers</span>
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="../../Assets/Icons/badge.png" alt="" />
-            <span>Rewards</span>
           </a>
         </div>
       </div>
