--- a/Client/Pages/Home/home.html
+++ b/Client/Pages/Home/home.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Burger King</title>
+    <link rel="Icon" type="Images/Icon" href="../../Assets/Icons/burger-king.png">
     <link
       href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
       rel="stylesheet"
@@ -18,7 +19,7 @@
     <header>
       <div class="navbar">
         <div class="top">
-          <a class="burgermenu" href="">
+          <a class="burgermenu" href="../BurgerMenu/burgermenu.html">
             <img src="./../../Assets/Icons/burger-bar.png" alt="" />
           </a>
           <a class="logo" href="./home.html">
@@ -31,7 +32,7 @@
             <a class="basket" href="../Sign-Up/signup.html">
               <button>
                 <img src="./../../Assets/Icons/basket.png" alt="" />
-                $0.00
+                $999.00
               </button>
             </a>
           </div>
@@ -172,10 +173,13 @@
             With offers on demand
           </h4>
           <div class="link">
-            <a class="appstore" href="">
+            <a
+              class="appstore"
+              href="https://play.google.com/store/apps?hl=en_US&gl=PL&pli=1"
+            >
               <img src="../../Assets/Images/PlayStore.png" alt="" />
             </a>
-            <a class="playstore" href="">
+            <a class="playstore" href="https://www.apple.com/app-store/">
               <img src="../../Assets/Images/download.png" alt="" />
             </a>
           </div>
@@ -192,7 +196,7 @@
       <div class="term">
         <span
           >TM & Copyright 2024 Burger King Company LLC. All Rights Reserved. I
-          <a href="">Do Not Sell Or Share My Personal Information</a>
+          Do Not Sell Or Share My Personal Information
         </span>
       </div>
     </section>
@@ -211,21 +215,9 @@
           </a>
         </div>
         <div>
-          <a href="">
-            <img src="../../Assets/Icons/barcode.png" alt="" />
-            <span>My Code</span>
-          </a>
-        </div>
-        <div>
-          <a href="">
+          <a href="../Offer/offer.html">
             <img src="../../Assets/Icons/discount.png" alt="" />
             <span>Offers</span>
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="../../Assets/Icons/badge.png" alt="" />
-            <span>Rewards</span>
           </a>
         </div>
       </div>
