--- a/Client/Pages/Locations/location.html
+++ b/Client/Pages/Locations/location.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="./location.js"></script>
-    <title>Document</title>
+    <link rel="Icon" type="Images/Icon" href="../../Assets/Icons/burger-king.png">
+
+    <title>Pick Up Locations - Burger King</title>
     <link
       href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
       rel="stylesheet"
@@ -15,7 +17,7 @@
     />
     <link rel="stylesheet" href="../../SCSS/main.css" />
   </head>
-  <body>
+  <body class="location-body">
     <div class="location-navbar">
       <div class="nav">
         <span>Pick Up</span>
@@ -263,19 +265,13 @@
         </div>
         <div class="location-bottom">
           <div class="order-menu">
-            <a href="">
-              <button class="location-offers">
-                <img src="../../Assets/Icons/information.png" alt="" />
-              </button>
-              <span>Info</span>
-            </a>
-            <a href="">
+            <a href="../Menu/menu.html">
               <button class="location-order">
                 <img src="../../Assets/Icons/burger.png" alt="" />
               </button>
               <span>Order</span>
             </a>
-            <a href="">
+            <a href="../Offer/offer.html">
               <button class="location-info">
                 <img src="../../Assets/Icons/order.png" alt="" />
               </button>
@@ -283,6 +279,199 @@
             </a>
           </div>
         </div>
+      </div>
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue Near</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="../Menu/menu.html">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="../Offer/offer.html">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue Near</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="../Menu/menu.html">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="../Offer/offer.html">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue Near</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="../Menu/menu.html">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="../Offer/offer.html">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue Near</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="../Menu/menu.html">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="../Offer/offer.html">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue Near</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="../Menu/menu.html">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="../Offer/offer.html">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="hidden">
       </div>
     </section>
 
@@ -290,7 +479,7 @@
       <div class="location">
         <div class="location-top">
           <div class="left">
-            <h1>500 Lyons Avenue Fav</h1>
+            <h1>500 Lyons Avenue fav</h1>
             <div class="mid">
               <span class="distance">3 km</span>
               <span class="work">~Open</span>
@@ -310,19 +499,13 @@
         </div>
         <div class="location-bottom">
           <div class="order-menu">
-            <a href="">
-              <button class="location-offers">
-                <img src="../../Assets/Icons/information.png" alt="" />
-              </button>
-              <span>Info</span>
-            </a>
-            <a href="">
+            <a href="../Menu/menu.html">
               <button class="location-order">
                 <img src="../../Assets/Icons/burger.png" alt="" />
               </button>
               <span>Order</span>
             </a>
-            <a href="">
+            <a href="../Offer/offer.html">
               <button class="location-info">
                 <img src="../../Assets/Icons/order.png" alt="" />
               </button>
@@ -331,13 +514,10 @@
           </div>
         </div>
       </div>
-    </section>
-
-    <section class="recents-content">
       <div class="location">
         <div class="location-top">
           <div class="left">
-            <h1>500 Lyons Avenue Recent</h1>
+            <h1>500 Lyons Avenue fav</h1>
             <div class="mid">
               <span class="distance">3 km</span>
               <span class="work">~Open</span>
@@ -357,19 +537,13 @@
         </div>
         <div class="location-bottom">
           <div class="order-menu">
-            <a href="">
-              <button class="location-offers">
-                <img src="../../Assets/Icons/information.png" alt="" />
-              </button>
-              <span>Info</span>
-            </a>
-            <a href="">
+            <a href="../Menu/menu.html">
               <button class="location-order">
                 <img src="../../Assets/Icons/burger.png" alt="" />
               </button>
               <span>Order</span>
             </a>
-            <a href="">
+            <a href="../Offer/offer.html">
               <button class="location-info">
                 <img src="../../Assets/Icons/order.png" alt="" />
               </button>
@@ -377,6 +551,165 @@
             </a>
           </div>
         </div>
+      </div>
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue fav</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="../Menu/menu.html">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="../Offer/offer.html">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="hidden">
+      </div>
+    </section>
+
+    <section class="recents-content">
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue rec</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="../Menu/menu.html">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="../Offer/offer.html">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue rec</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="../Menu/menu.html">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="../Offer/offer.html">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="location">
+        <div class="location-top">
+          <div class="left">
+            <h1>500 Lyons Avenue rec</h1>
+            <div class="mid">
+              <span class="distance">3 km</span>
+              <span class="work">~Open</span>
+            </div>
+            <div class="functionality">
+              <span>Drive Thru</span>
+              <span>Take Out</span>
+              <span>Eat In</span>
+            </div>
+          </div>
+          <div class="right">
+            <button>
+              <img class="active" src="../../Assets/Icons/heart.png" alt="" />
+              <img src="../../Assets/Icons/heart-red.png" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="location-bottom">
+          <div class="order-menu">
+            <a href="../Menu/menu.html">
+              <button class="location-order">
+                <img src="../../Assets/Icons/burger.png" alt="" />
+              </button>
+              <span>Order</span>
+            </a>
+            <a href="../Offer/offer.html">
+              <button class="location-info">
+                <img src="../../Assets/Icons/order.png" alt="" />
+              </button>
+              <span>Offers</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="hidden">
       </div>
     </section>
 
@@ -389,29 +722,19 @@
           </a>
         </div>
         <div>
-          <a href="../Locations/">
+          <a href="../Locations/location.html">
             <img src="../../Assets/Icons/menu.png" alt="" />
             <span>Menu</span>
           </a>
         </div>
+
         <div>
-          <a href="">
-            <img src="../../Assets/Icons/barcode.png" alt="" />
-            <span>My Code</span>
-          </a>
-        </div>
-        <div>
-          <a href="">
+          <a href="../Offer/offer.html">
             <img src="../../Assets/Icons/discount.png" alt="" />
             <span>Offers</span>
           </a>
         </div>
-        <div>
-          <a href="">
-            <img src="../../Assets/Icons/badge.png" alt="" />
-            <span>Rewards</span>
-          </a>
-        </div>
+
       </div>
     </div>
   </body>
