--- a/Client/Pages/Order-Delivery/order-delivery.html
+++ b/Client/Pages/Order-Delivery/order-delivery.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="Icon" type="Images/Icon" href="../../Assets/Icons/burger-king.png">
+      <title>Delivery Order - Burger King</title>
     <link
       href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
       rel="stylesheet"
@@ -19,7 +20,7 @@
   <body>
     <div class="card-header">
       <div class="left">
-        <a href="">
+        <a href="../Home/home.html">
           <img src="../../Assets/Icons/close.png" alt="" />
         </a>
       </div>
@@ -27,8 +28,7 @@
         <h4>Order Delivery</h4>
       </div>
     </div>
-
-    <div class="form-wrapper">
+    <div class="delivery-form-wrapper">
       <h4>Delivery Details</h4>
       <form action="#" method="post">
         <div class="form">
@@ -76,9 +76,7 @@
               </div>
               <div class="bottom">
                 <div class="left">
-                  <a href="">
-                    <button type="button" class="edit">Edit</button>
-                  </a>
+
                   <button type="button" class="remove">Remove</button>
                 </div>
                 <div class="right">
@@ -98,9 +96,7 @@
               </div>
               <div class="bottom">
                 <div class="left">
-                  <a href="">
-                    <button type="button" class="edit">Edit</button>
-                  </a>
+
                   <button type="button" class="remove">Remove</button>
                 </div>
                 <div class="right">
@@ -111,7 +107,7 @@
               </div>
             </div>
           </div>
-          <a href="">
+          <a href="../Locations/location.html">
             <button type="button">+ Add Items</button>
           </a>
         </div>
