--- a/Client/Pages/Order-Pickup/order-pickup.html
+++ b/Client/Pages/Order-Pickup/order-pickup.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="Icon" type="Images/Icon" href="../../Assets/Icons/burger-king.png">
+
+    <title>Pick Up Order- Burger King</title>
     <script defer src="./pickup.js"></script>
     <link
       href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
@@ -19,144 +21,114 @@
   <body>
     <div class="card-header">
       <div class="left">
-        <a href="">
+        <a href="../Home/home.html">
           <img src="../../Assets/Icons/close.png" alt="" />
         </a>
       </div>
       <div class="right">
-        <h4>Order Pick-Up</h4>
+        <h4>Order Pick Up</h4>
       </div>
     </div>
-    <div class="restaurant-detail">
-      <h1>Restaurant Details</h1>
-      <div class="wrapper">
-        <div class="top">
-          <span> 361 West Morris Street </span>
-        </div>
-        <div class="bottom">
-          <div class="pick-up-type">
-            <div class="left">
-              <button id="drive-thru" class="selected"></button>
-            </div>
-            <div class="right">
-              <span class="first">Drive Thru</span>
-              <span>Drive up and let us know you placed an online order.</span>
-            </div>
+    <div class="pickup-form-wrapper">
+      <form method="post">
+        <div class="restoran-details">
+          <h4>Restaurant Details</h4>
+          <div class="detail">
+            <span>15 Muar Street</span>
           </div>
-          <div class="pick-up-type">
-            <div class="left">
-              <button id="pick-up"></button>
-            </div>
-            <div class="right">
-              <span>Pick Up</span>
-              <span
-                >We’ll have your order ready at the counter when you
-                arrive.</span
-              >
-            </div>
-          </div>
-          <div class="pick-up-type">
-            <div class="left">
-              <button id="dine-in"></button>
-            </div>
-            <div class="right">
-              <span>Dine in</span>
-              <span
-                >Come on in and find a seat. We'll call your name when your
-                order is ready..</span
-              >
-            </div>
+          <div class="form">
+            <label>
+              <input required type="radio" name="option" value="option1" />Drive Thru
+            </label>
+            <label>
+              <input required type="radio" name="option" value="option2" />Pick Up
+            </label>
+            <label>
+              <input required type="radio" name="option" value="option3" />Dine In
+            </label>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="pick-up-time selected-pick-up">
-      <h4>Pick Up Time</h4>
-      <div class="times">
-        <div class="time">
-          <button>Now</button>
-        </div>
-        <div class="time">
-          <button>Now</button>
-        </div>
-        <div class="time">
-          <button>Now</button>
-        </div>
-      </div>
-    </div>
-    <div class="your-order">
-      <h4>Your Card</h4>
-      <div class="orders">
-        <div class="order">
-          <div class="order-header">
-            <h4>Medium French Fries</h4>
+        <!-- <div class="pick-up-time">
+          <h4>Pick up time</h4>
+          <div class="times">
+            <input value="Now" type="button" onclick="selectButton(this)">
+            <input value="10 minute" type="button" onclick="selectButton(this)">
+            <input value="15 minute" type="button" onclick="selectButton(this)">
+            <input value="20 minute" type="button" onclick="selectButton(this)">
           </div>
-          <div class="order-price">
-            <span>Item Total</span>
-            <span>$3.49</span>
-          </div>
-          <div class="order-edit">
-            <div class="left">
-              <a href="">
-                <button>Edit</button>
-              </a>
-              <button class="removebtn">Remove</button>
-            </div>
-            <div class="right">
-              <button id="incrementBtn">+</button>
-              <span id="numberDisplay">1</span>
-              <button id="decrementBtn">-</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a href="">
-        <button>+ Add Items</button>
-      </a>
-    </div>
-    <div class="subtotal-prices">
-      <div class="subtotal">
-        <span>Subtotal</span>
-        <span> $16.76</span>
-      </div>
-      <div class="tax">
-        <span>Tax</span>
-        <span> $1.34</span>
-      </div>
-      <div class="total">
-        <span>Total</span>
-        <span> $18.10</span>
-      </div>
-    </div>
-    <div class="card-add-order">
-      <div class="text">
-        <span>Add to Order</span>
-      </div>
-      <div class="add-order">
+        </div> -->
 
-        <div class="order">
-          <div class="order-left">
-            <div class="left">
-              <img src="../../Assets/Images/coca-cola.webp" alt="" />
+        <div class="orders-wrapper">
+          <h4>Your Card</h4>
+          <div class="orders">
+            <div class="order ">
+              <div class="top">
+                <span class="name">Candied Bacon Whopper® 1 </span>
+              </div>
+              <div class="mid">
+                <span class="total-price">Item Total</span>
+                <span class="price">$8.79</span>
+              </div>
+              <div class="bottom">
+                <div class="left">
+
+                  <button type="button" class="remove">Remove</button>
+                </div>
+                <div class="right">
+                  <button class="increment" type="button">+</button>
+                  <span class="display">1</span>
+                  <button type="button" class="decrement">-</button>
+                </div>
+              </div>
             </div>
-            <div class="right">
-              <h4>HERSHEY'S® Sundae Pie 2</h4>
-              <div>
-                <span>$2.79</span>
-                <span>310 Cal</span>
+            <div class="order ">
+              <div class="top">
+                <span class="name">Candied Bacon Whopper®</span>
+              </div>
+              <div class="mid">
+                <span class="total-price">Item Total</span>
+                <span class="price">$8.79</span>
+              </div>
+              <div class="bottom">
+                <div class="left">
+
+                  <button type="button" class="remove">Remove</button>
+                </div>
+                <div class="right">
+                  <button class="increment" type="button">+</button>
+                  <span class="display">1</span>
+                  <button type="button" class="decrement">-</button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="order-right">
-            <button class="order">
-              <img src="../../Assets/Icons/plus.png" alt="" />
-            </button>
+          <a href="../Locations/location.html">
+            <button type="button">+ Add Items</button>
+          </a>
+        </div>
+        <div class="taxs-wrapper">
+          <div class="taxs">
+            <div class="subtotal-tax">
+              <span>Subtotal</span>
+              <span> $8.79</span>
+            </div>
+            <div class="delivery-tax">
+              <span>Delivery Fee</span>
+              <span> $1.00</span>
+            </div>
+            <div class="total-tax">
+              <span>Total</span>
+              <span> $14.96</span>
+            </div>
           </div>
         </div>
+        <div class="submit-wrapper">
+          <a href="#">
+              <input class="submit-btn" type="submit" placeholder="Continue" name="Continue" id="" />
+          </a>
       </div>
-    </div>
-    <div class="submit-button">
-      <button>Continue</button>
+        <!-- <button type="submit">Submit</button> -->
+      </form>
     </div>
   </body>
 </html>
