--- a/Client/Pages/Sign-Up/signup.html
+++ b/Client/Pages/Sign-Up/signup.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="Icon" type="Images/Icon" href="../../Assets/Icons/burger-king.png">
+    <title>Sign Up - Burger King</title>
     <link
       href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
       rel="stylesheet"
@@ -41,7 +42,7 @@
         </form>
         
         <p class="signup-link">
-          You have already account? <a href="../Sign-in/signin.html">Sign In</a>
+          Do you already have an account? <a href="../Sign-in/signin.html">Sign In</a>
         </p>
       </div>
     </section>
