--- a/Client/Pages/Sign-in/signin.html
+++ b/Client/Pages/Sign-in/signin.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="Icon" type="Images/Icon" href="../../Assets/Icons/burger-king.png">
+    <title>Sign In - Burger King</title>
     <link
       href="https://db.onlinewebfonts.com/c/29eee6d957e73039264c9de9fd949d20?family=Flame+Sans"
       rel="stylesheet"
